RESOLVED FIXED172357
Access-Control-Expose-Headers parsed incorrectly
https://bugs.webkit.org/show_bug.cgi?id=172357
Summary Access-Control-Expose-Headers parsed incorrectly
Anne van Kesteren
Reported 2017-05-19 04:40:57 PDT
Test: https://github.com/w3c/web-platform-tests/pull/6000. In https://bugzilla.mozilla.org/show_bug.cgi?id=1364598 it was discovered that only Firefox handles this correctly out of the four browser engines. We'd appreciate if you could fix this. If you don't feel like you could fix this, please propose a change to the Fetch standard (and what change you'd like that to be) instead.
Attachments
Patch (2.95 KB, patch)
2019-09-15 04:42 PDT, Rob Buis
no flags
Patch (23.95 KB, patch)
2019-09-15 07:47 PDT, Rob Buis
no flags
Patch (24.14 KB, patch)
2019-09-15 08:57 PDT, Rob Buis
no flags
Patch (28.51 KB, patch)
2019-09-15 12:32 PDT, Rob Buis
no flags
Patch (28.47 KB, patch)
2019-09-16 23:48 PDT, Rob Buis
no flags
Patch (28.47 KB, patch)
2019-09-17 00:18 PDT, Rob Buis
no flags
Rob Buis
Comment 1 2019-09-15 04:42:39 PDT
Rob Buis
Comment 2 2019-09-15 07:47:11 PDT
Rob Buis
Comment 3 2019-09-15 08:57:07 PDT
Rob Buis
Comment 4 2019-09-15 12:32:52 PDT
Rob Buis
Comment 5 2019-09-15 14:05:24 PDT
Note that the test is all PASSes on Catalina, I assume because of a CFNetwork fix/change.
youenn fablet
Comment 6 2019-09-16 20:07:52 PDT
Comment on attachment 378819 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=378819&action=review > Source/WebCore/platform/network/HTTPParsers.h:148 > set.add(string.substring(start, end - start + 1)); We are creating a string twice, can we optimise this? We could try to use a StringView for the isValidHTTPToken case. > Source/WebCore/platform/network/HTTPParsers.h:162 > + return set; Why doing set.clear() and return Set. Can we just do: return { }
Rob Buis
Comment 7 2019-09-16 23:48:28 PDT
Rob Buis
Comment 8 2019-09-16 23:50:10 PDT
Comment on attachment 378819 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=378819&action=review >> Source/WebCore/platform/network/HTTPParsers.h:148 >> set.add(string.substring(start, end - start + 1)); > > We are creating a string twice, can we optimise this? > We could try to use a StringView for the isValidHTTPToken case. Fixed. >> Source/WebCore/platform/network/HTTPParsers.h:162 >> + return set; > > Why doing set.clear() and return Set. > Can we just do: return { } Right, I was not happy with this before, done.
youenn fablet
Comment 9 2019-09-17 00:08:58 PDT
Comment on attachment 378942 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=378942&action=review > Source/WebCore/platform/network/HTTPParsers.h:149 > + set.add(token); WTFMove()
Rob Buis
Comment 10 2019-09-17 00:18:31 PDT
WebKit Commit Bot
Comment 11 2019-09-17 00:56:15 PDT
Comment on attachment 378944 [details] Patch Clearing flags on attachment: 378944 Committed r249946: <https://trac.webkit.org/changeset/249946>
WebKit Commit Bot
Comment 12 2019-09-17 00:56:16 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 13 2019-09-17 00:57:17 PDT
Russell Epstein
Comment 14 2019-09-17 13:57:23 PDT
(In reply to Rob Buis from comment #5) > Note that the test is all PASSes on Catalina, I assume because of a > CFNetwork fix/change. Rebaselined for Catalina and iOS 13 in r249981.
Rob Buis
Comment 15 2019-09-17 23:04:34 PDT
(In reply to Russell Epstein from comment #14) > (In reply to Rob Buis from comment #5) > > Note that the test is all PASSes on Catalina, I assume because of a > > CFNetwork fix/change. > > Rebaselined for Catalina and iOS 13 in r249981. Thnx! I did not know platform/mac was already meant for Catalina.
Note You need to log in before you can comment on or make changes to this bug.