Source/WebCore/platform/network/HTTPParsers.h
@@ -124,25 +124,30 @@ inline StringView stripLeadingAndTrailingHTTPSpaces(StringView string)
 }
 
 template<class HashType>
-void addToAccessControlAllowList(const String& string, unsigned start, unsigned end, HashSet<String, HashType>& set)
+bool addToAccessControlAllowList(const String& string, unsigned start, unsigned end, HashSet<String, HashType>& set)
 {
     StringImpl* stringImpl = string.impl();
     if (!stringImpl)
-        return;
+        return true;
 
     // Skip white space from start.
-    while (start <= end && isSpaceOrNewline((*stringImpl)[start]))
+    while (start <= end && isHTTPSpace((*stringImpl)[start]))
         ++start;
 
     // only white space
     if (start > end)
-        return;
+        return true;
 
     // Skip white space from end.
-    while (end && isSpaceOrNewline((*stringImpl)[end]))
+    while (end && isHTTPSpace((*stringImpl)[end]))
         --end;
 
-    set.add(string.substring(start, end - start + 1));
+    auto token = string.substring(start, end - start + 1);
+    if (!isValidHTTPToken(token))
+        return false;
+
+    set.add(WTFMove(token));
+    return true;
 }
 
 template<class HashType = DefaultHash<String>::Hash>
@@ -152,12 +157,16 @@ HashSet<String, HashType> parseAccessControlAllowList(const String& string)
     unsigned start = 0;
     size_t end;
     while ((end = string.find(',', start)) != notFound) {
-        if (start != end)
-            addToAccessControlAllowList(string, start, end - 1, set);
+        if (start != end) {
+            if (!addToAccessControlAllowList(string, start, end - 1, set))
+                return { };
+        }
         start = end + 1;
     }
-    if (start != string.length())
-        addToAccessControlAllowList(string, start, string.length() - 1, set);
+    if (start != string.length()) {
+        if (!addToAccessControlAllowList(string, start, string.length() - 1, set))
+            return { };
+    }
     return set;
 }
 
