LayoutTests/imported/w3c/web-platform-tests/cors/access-control-expose-headers-parsing.window.js
@@ -1,13 +1,17 @@
-function exposeTest(resource, desc) {
-  const url = new URL("resources/" + resource, location.href).href.replace("://", "://élève.");
+// META: script=/common/get-host-info.sub.js
 
-  promise_test(() => {
-    return fetch(url).then(res => {
-      assert_equals(res.headers.get("content-language"), "sure")
-      assert_equals(res.headers.get("x-custom"), null);
-    })
-  }, "Access-Control-Expose-Headers parsing: " + desc);
+promise_test(() => fetch("resources/access-control-expose-headers.json").then(res => res.json()).then(runTests), "Loading JSON…");
+
+function runTests(allTestData) {
+  allTestData.forEach(testData => {
+    const encodedInput = encodeURIComponent(testData.input);
+    promise_test(() => {
+      const relativeURL = "cors/resources/expose-headers.py?expose=" + encodedInput,
+            url = new URL(relativeURL, get_host_info().HTTP_REMOTE_ORIGIN);
+      return fetch(url).then(res => {
+        assert_equals(res.headers.get("content-language"), "mkay");
+        assert_equals(res.headers.get("bb-8"), (testData.exposed ? "hey" : null));
+      });
+    }, "Parsing: " + encodedInput);
+  })
 }
-
-exposeTest("access-control-expose-headers-parsing.asis", "#1");
-exposeTest("access-control-expose-headers-parsing-2.asis", "#2")
